fixing multiple address on each client